# cobs-hs

./: .gitignore  .gitmodules  cobs.cabal
cbits/: shims.c
src/Codec/: COBS.hs
